<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_connect"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_connect"/>
    
    <item
        android:id="@+id/action_video"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_videoStart" android:enabled="false"/>
    
    <item
        android:id="@+id/action_Camchange"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_Camchange"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_bout"/>

</menu>
